修复编译错误：修复@Slf4j注解错误插入问题，为缺少log变量的类手动添加log变量